--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
-body {
+body, html {
     user-select: none;
     padding: 0;
     margin: 0;
@@ -51,11 +51,14 @@ input{
     border: none;
     outline: none;
     padding-left: 1.3889vh;
-    font-size: 1.6667vh;
+    font-size: 1.7667vh;
     color: white;
 }
 span{
     font-size: 1.2667vh;
+}
+.question label *{
+    font-size: 0.3667vh !important;
 }
 #checkavaliacao{
     width: 100%;
@@ -249,21 +252,30 @@ audio{
     color: white;
     text-transform: uppercase;
   }
-    label, input[type="radio"]{
-        width: 20px;
-        height: 20px;
-        border-radius: 50% !important;
-        outline: none !important;
-    }
+label, input[type="radio"]{
+    width: 20px;
+    height: 20px;
+    border-radius: 50% !important;
+    outline: none !important;
+}
     
-    label{
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 10px;
-    }
+label{
+    width: 100%;
+    font-size: 17px;
+    opacity: 85%;
+    font-weight: 100;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+label:hover{
+    transition: 0.2s ease-in-out;
+    opacity: 100%;
+    font-weight: 400;
+}
     .profile{
         position: fixed;
         top: 2vh;
