--- a/style.css
+++ b/style.css
@@ -374,3 +374,9 @@ label:hover{
     opacity: 0;
   }
   
+
+  #imageteste:hover{
+    transition: .3s ease-in-out;
+    transform: scale(1.85);
+
+  }
